feat: add admin analytics data center
